infra/k8s.prod/client.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-client
  template:
    metadata:
      labels:
        app: tckhb-client
    spec:
      containers:
        - name: tckhb-client-container
          image: erfanseidipoor/tckhb-client
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002

---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-client-clisterip-service
spec:
  type: ClusterIP
  selector:
    app: tckhb-client
  ports:
    - name: client
      protocol: TCP
      port: 8002
      targetPort: 8002
