infra/k8s.prod/expiration-redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-expiration-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-expiration-redis
  template:
    metadata:
      labels:
        app: tckhb-expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-expiration-redis-clusterip-service
spec:
  selector:
    app: tckhb-expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
