infra/k8s.prod/expiration.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-expiration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-expiration
  template:
    metadata:
      labels:
        app: tckhb-expiration
    spec:
      containers:
        - name: tckhb-expiration-container
          image: erfanseidipoor/tckhb-expiration
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8005

---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-expiration-clisterip-service
spec:
  type: ClusterIP
  selector:
    app: tckhb-expiration
  ports:
    - name: expiration
      protocol: TCP
      port: 8005
      targetPort: 8005
