infra/k8s.prod/kafdrop.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-kafdrop-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-kafdrop
  template:
    metadata:
      labels:
        app: tckhb-kafdrop
    spec:
      containers:
        - name: kafdrop
          image: obsidiandynamics/kafdrop:latest
          # resources:
          #   limits:
          #     memory: '200Mi'
          #     cpu: '200m'
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-kafdrop-clusterip-service
spec:
  selector:
    app: tckhb-kafdrop
  ports:
    - name: client
      protocol: TCP
      port: 9000
      targetPort: 9000
