infra/k8s.prod/kafka.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-kafka
  template:
    metadata:
      labels:
        app: tckhb-kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          # resources:
          #   limits:
          #     memory: '200Mi'
          #     cpu: '200m'
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-kafka-clusterip-service
spec:
  selector:
    app: tckhb-kafka
  ports:
    - name: kafka-clusterip
      protocol: TCP
      port: 9092
      targetPort: 9092
