infra/k8s.prod/orders-mongo.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-orders-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-orders-mongo
  template:
    metadata:
      labels:
        app: tckhb-orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
          ports:
            - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-orders-mongo-clusterip-service
spec:
  selector:
    app: tckhb-orders-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
