infra/k8s.prod/orders.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-orders
  template:
    metadata:
      labels:
        app: tckhb-orders
    spec:
      containers:
        - name: tckhb-orders-container
          image: erfanseidipoor/tckhb-orders
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8004

---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-orders-clisterip-service
spec:
  type: ClusterIP
  selector:
    app: tckhb-orders
  ports:
    - name: orders
      protocol: TCP
      port: 8004
      targetPort: 8004
