infra/k8s.prod/payments.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-payments
  template:
    metadata:
      labels:
        app: tckhb-payments
    spec:
      containers:
        - name: tckhb-payments-container
          image: erfanseidipoor/tckhb-payments
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8006

---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-payments-clisterip-service
spec:
  type: ClusterIP
  selector:
    app: tckhb-payments
  ports:
    - name: payments
      protocol: TCP
      port: 8006
      targetPort: 8006
