infra/k8s.prod/tickets-mongo.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tckhb-tickets-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tckhb-tickets-mongo
  template:
    metadata:
      labels:
        app: tckhb-tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
          ports:
            - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: tckhb-tickets-mongo-clusterip-service
spec:
  selector:
    app: tckhb-tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
